# APEX_CORE

./: .current_version  .gitignore  .gitmodules  .last_build  agent_tool_map.txt  apex_audit.sh  apex_orchestrator.py  bridge_init.py  build_manifest.txt  buildozer.spec  bypass_fix.h  check_alignment.sh  control_api.py  crash_summary.txt  dashboard.py  deliveries  discover_tools.py  get_apex.sh  grandmaster_sync.py  ignite_forge.sh  industrial_weld.sh  industrial_weld_v83.sh  ingest_repo.sh  local_reasoning.py  main.py  master_interface.py  monitor_forge.py  pixel_sight.py  remote_orchestrator.py  requirements.txt  rsa  setup_agent.py  sovereign_agent.py  sovereign_shim.h  start_cc.sh  start_global_bridge.sh  sync_manifest.txt  tool_architect.py  tool_expansion_list.txt  trigger.txt  (+3 more)
tools/droidmind/: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  mkdocs.yml  pyproject.toml
tools/droidmind/.cursor/rules/: 001_workspace.mdc  002_cursor_rules.mdc  003_cursor_docs.mdc  004_aesthetic.mdc
tools/droidmind/.github/workflows/: ci-cd.yml
tools/droidmind/docs/: docker.md  index.md  installation.md  license.md  mcp-reference.md  plan.md  quickstart.md
tools/droidmind/docs/assets/javascripts/: custom.js
tools/droidmind/docs/assets/stylesheets/: custom.css
tools/droidmind/docs/user_manual/: app_management.md  connecting_devices.md  device_diagnostics.md  device_management_actions.md  example_queries.md  file_system.md  index.md  security.md  shell_commands.md  ui_automation.md
tools/droidmind/droidmind/: __init__.py  adb.py  client.py  console.py  context.py  devices.py  filesystem.py  log.py  packages.py  prompts.py  security.py  server.py
tools/droidmind/droidmind/tools/: __init__.py  app_management.py  common.py  device_management.py  diagnostics.py  file_operations.py  intents.py  logs.py  media.py  shell.py  ui.py
tools/droidmind/scripts/: lint.py  release.py
tools/droidmind/tests/: __init__.py  conftest.py  test_adb_wrapper.py  test_app_management.py  test_device_manager.py  test_file_resources.py  test_file_tools.py  test_log_tools.py  test_security.py  test_server.py  test_ui_tools.py
tools/mobile-use/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  docker-compose.yml  docker-entrypoint.sh  llm-config.defaults.jsonc  llm-config.override.template.jsonc  mobile-use.ps1  mobile-use.sh  pyproject.toml  pyrightconfig.json  slim.Dockerfile
tools/mobile-use/.github/: PULL_REQUEST_TEMPLATE.md
tools/mobile-use/.github/ISSUE_TEMPLATE/: bug_report-🐞.md  feature-request-🚀.md
tools/mobile-use/.github/workflows/: deployment.yml  feature.yml  ios-tests.yml  update-graph-docs.yml
tools/mobile-use/.windsurf/workflows/: check_prompt_consistency.md  generate-pr-title-description.md
tools/mobile-use/minitap/mobile_use/: config.py  constants.py  context.py  main.py
tools/mobile-use/minitap/mobile_use/agents/contextor/: contextor.md  contextor.py  types.py
tools/mobile-use/minitap/mobile_use/agents/cortex/: cortex.md  cortex.py  types.py
tools/mobile-use/minitap/mobile_use/agents/executor/: executor.md  executor.py  tool_node.py
tools/mobile-use/minitap/mobile_use/agents/hopper/: hopper.md  hopper.py
tools/mobile-use/minitap/mobile_use/agents/orchestrator/: human.md  orchestrator.md  orchestrator.py  types.py
tools/mobile-use/minitap/mobile_use/agents/outputter/: human.md  outputter.py  test_outputter.py
tools/mobile-use/minitap/mobile_use/agents/planner/: human.md  planner.md  planner.py  types.py  utils.py
tools/mobile-use/minitap/mobile_use/agents/summarizer/: summarizer.py
tools/mobile-use/minitap/mobile_use/agents/video_analyzer/: __init__.py  human.md  video_analyzer.md  video_analyzer.py
tools/mobile-use/minitap/mobile_use/clients/: adb_tunnel.py  browserstack_client.py  idb_client.py  ios_client.py  ios_client_config.py  limrun_client.py  limrun_factory.py  ui_automator_client.py  wda_client.py  wda_lifecycle.py
tools/mobile-use/minitap/mobile_use/controllers/: android_controller.py  controller_factory.py  device_controller.py  ios_controller.py  limrun_controller.py  platform_specific_commands_controller.py  types.py  unified_controller.py
tools/mobile-use/minitap/mobile_use/graph/: graph.py  state.py
tools/mobile-use/minitap/mobile_use/sdk/: __init__.py  agent.py  constants.py  utils.py
tools/mobile-use/minitap/mobile_use/sdk/builders/: __init__.py  agent_config_builder.py  index.py  task_request_builder.py
tools/mobile-use/minitap/mobile_use/sdk/examples/: README.md  __init__.py  app_lock_messaging.py  platform_manual_task_example.py  platform_minimal_example.py  simple_photo_organizer.py  smart_notification_assistant.py  video_transcription_example.py
tools/mobile-use/minitap/mobile_use/sdk/services/: cloud_mobile.py  platform.py
tools/mobile-use/minitap/mobile_use/sdk/types/: __init__.py  agent.py  exceptions.py  platform.py  task.py
tools/mobile-use/minitap/mobile_use/services/: accessibility.py  llm.py  telemetry.py
tools/mobile-use/minitap/mobile_use/tools/: index.py  scratchpad.py  test_utils.py  tool_wrapper.py  types.py  utils.py
tools/mobile-use/minitap/mobile_use/tools/mobile/: back.py  (+12 more)
tools/mobile-use/minitap/mobile_use/utils/: app_launch_utils.py  cli_helpers.py  cli_selection.py  conversations.py  decorators.py  errors.py  file.py  logger.py  media.py  recorder.py  requests_utils.py  shell_utils.py  test_ui_hierarchy.py  time.py  ui_hierarchy.py  video.py
tools/mobile-use/scripts/: test_limrun.py
tools/mobile-use/scripts/doc/: generate_graph_docs.py
tools/mobile-use/scripts/git/: get_branch_diff.ps1  get_branch_diff.sh
tools/mobile-use/skills/: README.md
tools/mobile-use/skills/mobile-use-setup/: SKILL.md
tools/mobile-use/skills/mobile-use-setup/references/: android-device.md  ios-physical-device.md  platform-vs-local.md
tools/mobile-use/skills/mobile-use-setup/scripts/: check-prerequisites.sh  create-project.sh  verify-device.sh
tools/mobile-use/tests/mobile_use/: test_idb_client.py
(+509 files in other folders)
